traces/bug_531.txt
examples++-mpi/complex_SuperLU_DIST_FreeFem.cpp:589: error: DEAD_STORE
  The value written to &R_SLU (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/complex_SuperLU_DIST_FreeFem.cpp:589:7: Write of unused value
587.         epsr = (eps < 0) ? (epsr >0 ? -epsr : -eps ) : eps ;
588.         
589.         Dtype_t R_SLU = SuperLUmpiDISTDriver<R>::R_SLU_T(); 
             ^
590.         nrhs= 1;
591.         
